# mirror

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose.yaml
config/: config.alloy  ds.yaml  loki-config.yaml  nginx-dev.conf  nginx-prod.conf  nginx.conf
config/sync/configs/: ftpsync.conf  mirrors.json  mirrors.schema.json  quick-fedora-mirror.conf
configs/: alloy.conf  grafana.ini  sync-scheduler.env.example
mirror-map/src/main/java/mirrormap/geoip/: GeoIPUpdater.java
mirror-map/src/main/java/mirrormap/main/: MirrorMapApplication.java
mirror-map/src/main/java/mirrormap/websocket/: WebsocketServer.java
mirror-sync-scheduler/: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  readme.md
mirror-sync-scheduler/cmake/: fetch_deps.cmake
mirror-sync-scheduler/configs/: mirrors.json
mirror-sync-scheduler/include/mirror/sync_scheduler/: JobManager.hpp  ManualSyncListener.hpp  Project.hpp  Schedule.hpp  SyncDetails.hpp  SyncJob.hpp  SyncScheduler.hpp  ThreadPool.hpp
mirror-sync-scheduler/src/: CMakeLists.txt  JobManager.cpp  ManualSyncListener.cpp  Project.cpp  Schedule.cpp  SyncDetails.cpp  SyncScheduler.cpp  ThreadPool.cpp  main.cpp  utils.hpp
mirror-sync-scheduler/src_old/: main-old.cpp  queue-old.cpp  queue-old.hpp  schedule-old.cpp  schedule-old.hpp  utils-old.hpp
mirror-torrent-handler/src/main/java/mirrortorrent/main/: MirrorTorrentApplication.java
mirror-verifier/: Dockerfile  pom.xml
mirror-verifier/src/main/java/: MirrorJsonValidator.java
mirror-website/mirror_website/: views.py
module/map/: Dockerfile  requirements.txt
module/map-v2/: requirements.txt
module/map-v2/src/: main.py
module/map/src/: main.py
module/rsyncd/: Dockerfile  entrypoint.sh  genconf.py  motd.txt
module/sync/: .gitignore  Dockerfile
module/sync/include/mirror/sync_scheduler/: JobManager.hpp  ProjectCatalogue.hpp  SyncJob.hpp
module/sync/src/: JobManager.cpp  SyncScheduler.cpp
module/web/: Dockerfile
module/web/mirror_website/: settings.py  views.py
module/web/mirror_website/static/css/: style.css
module/web/mirror_website/templates/: base.html
scripts/kicad/: kicad_sync.py
stats-bot/: CMakeLists.txt  Dockerfile  README.md
stats-bot/cmake/: fetch_deps.cmake
stats-bot/include/: bot.hpp  stats.hpp
stats-bot/src/: CMakeLists.txt  bot.cpp  main.cpp  stats.cpp
